--- a/src/fr.lproj/Localizable.strings
+++ b/src/fr.lproj/Localizable.strings
@@ -13,7 +13,8 @@
 
 // Connection View
 "Cannot connect to the Internet" = "Aucune connexion à Internet";
-"You must connect to a Wi-Fi or cellular data network to use this application." = "Vous devez être connecté à un réseau Wi-Fi ou cellulaire pour utiliser cette application.";
+"You must connect to a Wi-Fi or cellular data network to view the map." = "Vous devez être connecté à un réseau Wi-Fi ou cellulaire pour voir la carte ";
+"To take advantage of offline mode, you need to connect once to Internet to create the database of hotspots." = "Pour profiter du MODE HORS-LIGNE, vous devez vous connecter une première fois à Internet afin de créer la base de données des points d'accès";
 
 "Loading..." = "Chargement...";
 "Locating..." = "Localisation...";
