--- a/src/en.lproj/Localizable.strings
+++ b/src/en.lproj/Localizable.strings
@@ -7,12 +7,14 @@
  */
  
 "Map" = "Map";
+"Hotspots" = "Hotspots";
 "News" = "News";
 "Informations" = "Informations";
 "Favorites" = "Favorites";
 // Connection View
 "Cannot connect to the Internet" = "Cannot connect to the Internet";
 "You must connect to a Wi-Fi or cellular data network to view the map." = "You must connect to a Wi-Fi or cellular data network to view the map.";
+"You must connect to a Wi-Fi or cellular data network to view the news." = "You must connect to a Wi-Fi or cellular data network to view the news.";
 "To take advantage of offline mode, you need to connect once to Internet to create the database of hotspots." = "To take advantage of OFFLINE MODE, you need to connect once to Internet to create the database of hotspots.";
 
 "Loading..." = "Loading...";
