--- a/src/fr.lproj/Localizable.strings
+++ b/src/fr.lproj/Localizable.strings
@@ -7,6 +7,7 @@
  */
 
 "Map" = "Carte";
+"Hotspots" = "Points d'accès";
 "News" = "Nouvelles";
 "Informations" = "Informations";
 "Favorites" = "Favoris";
@@ -14,6 +15,7 @@
 // Connection View
 "Cannot connect to the Internet" = "Aucune connexion à Internet";
 "You must connect to a Wi-Fi or cellular data network to view the map." = "Vous devez être connecté à un réseau Wi-Fi ou cellulaire pour voir la carte ";
+"You must connect to a Wi-Fi or cellular data network to view the news." = "Vous devez être connecté à un réseau Wi-Fi ou cellulaire pour voir les nouvelles ";
 "To take advantage of offline mode, you need to connect once to Internet to create the database of hotspots." = "Pour profiter du MODE HORS-LIGNE, vous devez vous connecter une première fois à Internet afin de créer la base de données des points d'accès";
 
 "Loading..." = "Chargement...";
